[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/MainTab.png" type="Texture" id=1]
[ext_resource path="res://UI/OtherTabs.png" type="Texture" id=2]
[ext_resource path="res://UI/Heart.png" type="Texture" id=3]
[ext_resource path="res://UI/UI.gd" type="Script" id=4]
[ext_resource path="res://UI/Dmg.png" type="Texture" id=5]
[ext_resource path="res://UI/MaxHp.png" type="Texture" id=6]
[ext_resource path="res://UI/new_theme.tres" type="Theme" id=7]
[ext_resource path="res://UI/Info/Info.tscn" type="PackedScene" id=8]

[node name="UI" type="Sprite"]
z_index = 4096
script = ExtResource( 4 )

[node name="MainTab" type="NinePatchRect" parent="."]
margin_left = 91.0
margin_top = 4.0
margin_right = 123.0
margin_bottom = 92.0
texture = ExtResource( 1 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="MaxHpTab" type="NinePatchRect" parent="."]
margin_left = 94.0
margin_top = 7.0
margin_right = 120.0
margin_bottom = 17.0
texture = ExtResource( 2 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="MaxHpTab"]
margin_left = 2.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 16.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 7 )
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="MaxHpTab"]
margin_left = 17.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 9.0
texture = ExtResource( 6 )

[node name="HpTab" type="NinePatchRect" parent="."]
margin_left = 94.0
margin_top = 19.0
margin_right = 120.0
margin_bottom = 29.0
texture = ExtResource( 2 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="HpTab"]
margin_left = 2.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 16.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 7 )
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="HpTab"]
margin_left = 17.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 9.0
texture = ExtResource( 3 )

[node name="DmgTab" type="NinePatchRect" parent="."]
margin_left = 94.0
margin_top = 31.0
margin_right = 120.0
margin_bottom = 41.0
texture = ExtResource( 2 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="Label" type="Label" parent="DmgTab"]
margin_left = 2.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 16.0
rect_scale = Vector2( 0.65, 0.65 )
theme = ExtResource( 7 )
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="DmgTab"]
margin_left = 17.0
margin_top = 1.0
margin_right = 25.0
margin_bottom = 9.0
texture = ExtResource( 5 )

[node name="Info" parent="." instance=ExtResource( 8 )]
